fix calc for scrollbar

--- a/src/containers/AppMap/AppMap.scss
+++ b/src/containers/AppMap/AppMap.scss
@@ -1,4 +1,4 @@
-.map {
+.app-map {
     height: 100%;
     width: 100vw;
     &-inner {
